--- a/html/assign_counselor.html
+++ b/html/assign_counselor.html
@@ -248,7 +248,7 @@
 
                             <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
-                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Student Management</h5>
+                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Assign Counselor</h5>
                                 <div class="d-flex align-items-center flex-md-row flex-column">
                                     <select class="form-select session-select" required="" style="width: fit-content;">
                                         <option>Select Session </option>
@@ -520,7 +520,7 @@
 
                             <!-- Striped Rows -->
                             <div class="card  pb-4 px-lg-4 px-2">
-                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">InQuiry</h5>
+                                <h5 class="card-header px-0 bg-white border-bottom-0  py-3 mb-2">Assigned Counselor</h5>
                                 <div class="row ">
                                     <div class="col-lg-3 mb-3">
 
