--- a/html/assign_counselor.html
+++ b/html/assign_counselor.html
@@ -2828,8 +2828,8 @@
 
                 new DataTable('#assign', {
                     language: {
-                        searchvalue: "Search records",
-                    },
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -2838,8 +2838,8 @@
                 // new DataTable('#inquiry');
                 new DataTable('#inquiry', {
                     language: {
-                        searchvalue: "Search records",
-                    },
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
