--- a/html/student-management.html
+++ b/html/student-management.html
@@ -4387,9 +4387,9 @@
             $(document).ready(function () {
 
                 new DataTable('#example', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
+                     language: {
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4397,9 +4397,9 @@
 
                 // new DataTable('#inquiry');
                 new DataTable('#inquiry', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
+                     language: {
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4408,9 +4408,9 @@
 
                 // new DataTable('#inprogress');
                 new DataTable('#inprogress', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
+                     language: {
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4418,9 +4418,9 @@
 
                 // new DataTable('#inprogress');
                 new DataTable('#paidstudent', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
+                     language: {
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4428,9 +4428,9 @@
 
                 // new DataTable('#inprogress');
                 new DataTable('#t20', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
+                     language: {
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4439,9 +4439,9 @@
 
                 // new DataTable('#visaAccepted');
                 new DataTable('#visaAccepted', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
+                     language: {
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4449,18 +4449,18 @@
 
                 // new DataTable('#visaAccepted');
                 new DataTable('#visaRefused', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
+                     language: {
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
                 });
                 // new DataTable('#close');
                 new DataTable('#closed', {
-                    language: {
-                        searchvalue: "Search records",
-                    },
+                     language: {
+        searchPlaceholder: "Search records"
+    },
                     responsive: true,
                     "paging": false,
                     "info": false
