--- a/html/assign_counselor.html
+++ b/html/assign_counselor.html
@@ -270,9 +270,9 @@
                                 <table id="assign" class="table  nowrap border-0 " style="width:100%">
                                     <thead>
                                         <tr class="dt-head">
-                                            <th></th>
-                                            <th>Check</th>
-                                            <th>#</th>
+                                            <th style="width: 40px;"></th>
+                                            <th style="width: 50px;">Check</th>
+                                            <th  style="width: 40px;">#</th>
 
                                             <th style="text-align:center; "> Name </th>
                                             <th style="text-align:center; "> Assign Std </th>
@@ -294,12 +294,12 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td></td>
-                                            <td><input type="checkbox" name="check[]" value="done"></td>
-                                            <td class="text-center">1</td>
+                                            <td style="width: 40px;"></td>
+                                            <td style="width: 40px !important;"><input type="checkbox" name="check[]" value="done"></td>
+                                            <td class="text-center" style="width: 40px;">1</td>
 
 
-                                            <td class="text-center"> MUHAMMAD ASHIR ADNAN (612024)</td>
+                                            <td class="text-center" style="white-space: normal !important; min-width: 100px !important;"> MUHAMMAD ADNAN</td>
                                             <td>
 
 
@@ -385,7 +385,7 @@
                                             <td class="text-center">1</td>
 
 
-                                            <td class="text-center"> AUKASHA JAWAID</td>
+                                            <td class="text-center" style="white-space: normal !important; min-width: 170px !important;" > AUKASHA JAWAID</td>
                                             <td>
                                                 <form method="post" >
 
