--- a/html/student-management.html
+++ b/html/student-management.html
@@ -57,7 +57,7 @@
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
                     <a href="index.html" class="">
-                        <img src="/assets/img/Asset 1.png" alt="" class="">
+                        <img src="/assets/img/logo (2).png" alt="" class="">
                     </a>
                 </div>
                 <div class="menu-inner-shadow"></div>
@@ -98,6 +98,17 @@
                         </a>
                         <ul class="menu-sub">
 
+                            <li class="menu-item ">
+                                <a href="student-invoice.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Student Invoice</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="sale-invoice.html" class="menu-link">
+                                    <div data-i18n="Text Divider">Sale Invoice</div>
+                                </a>
+                            </li>
+
                             <li class="menu-item">
                                 <a href="assign_counselor.html" class="menu-link">
                                     <div data-i18n="Text Divider">Assign Counselor</div>
@@ -116,8 +127,13 @@
                         <ul class="menu-sub">
 
                             <li class="menu-item ">
-                                 <a href="users-list.html" class="menu-link">
+                                <a href="users-list.html" class="menu-link">
                                     <div data-i18n="Text Divider">Users</div>
+                                </a>
+                            </li>
+                            <li class="menu-item ">
+                                <a href="user-access.html" class="menu-link">
+                                   <div data-i18n="Text Divider">Users Access Role</div>
                                 </a>
                             </li>
 
@@ -4387,9 +4403,9 @@
             $(document).ready(function () {
 
                 new DataTable('#example', {
-                     language: {
-        searchPlaceholder: "Search records"
-    },
+                    language: {
+                        searchPlaceholder: "Search records"
+                    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4397,9 +4413,9 @@
 
                 // new DataTable('#inquiry');
                 new DataTable('#inquiry', {
-                     language: {
-        searchPlaceholder: "Search records"
-    },
+                    language: {
+                        searchPlaceholder: "Search records"
+                    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4408,9 +4424,9 @@
 
                 // new DataTable('#inprogress');
                 new DataTable('#inprogress', {
-                     language: {
-        searchPlaceholder: "Search records"
-    },
+                    language: {
+                        searchPlaceholder: "Search records"
+                    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4418,9 +4434,9 @@
 
                 // new DataTable('#inprogress');
                 new DataTable('#paidstudent', {
-                     language: {
-        searchPlaceholder: "Search records"
-    },
+                    language: {
+                        searchPlaceholder: "Search records"
+                    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4428,9 +4444,9 @@
 
                 // new DataTable('#inprogress');
                 new DataTable('#t20', {
-                     language: {
-        searchPlaceholder: "Search records"
-    },
+                    language: {
+                        searchPlaceholder: "Search records"
+                    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4439,9 +4455,9 @@
 
                 // new DataTable('#visaAccepted');
                 new DataTable('#visaAccepted', {
-                     language: {
-        searchPlaceholder: "Search records"
-    },
+                    language: {
+                        searchPlaceholder: "Search records"
+                    },
                     responsive: true,
                     "paging": false,
                     "info": false
@@ -4449,18 +4465,18 @@
 
                 // new DataTable('#visaAccepted');
                 new DataTable('#visaRefused', {
-                     language: {
-        searchPlaceholder: "Search records"
-    },
+                    language: {
+                        searchPlaceholder: "Search records"
+                    },
                     responsive: true,
                     "paging": false,
                     "info": false
                 });
                 // new DataTable('#close');
                 new DataTable('#closed', {
-                     language: {
-        searchPlaceholder: "Search records"
-    },
+                    language: {
+                        searchPlaceholder: "Search records"
+                    },
                     responsive: true,
                     "paging": false,
                     "info": false
