--- a/html/sm.html
+++ b/html/sm.html
@@ -55,7 +55,7 @@
       <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
         <div class="app-brand demo">
           <a href="index.html" class="">
-            <img src="/assets/img/Asset 1.png" alt="" class="">
+           <img src="/assets/img/logo (2).png" alt="" class="">
           </a>
         </div>
         <div class="menu-inner-shadow"></div>
