--- a/html/assign_counselor.html
+++ b/html/assign_counselor.html
@@ -356,7 +356,7 @@
 
                                             <td class="text-center">
                                                 <button type="button" data-bs-toggle="modal" data-bs-target="#view"
-                                                    class="btn btn-info btn-xs me-2 view-btn" title="View"
+                                                    class="btn btn-primary btn-xs me-2 view-btn" title="View"
                                                     data-toggle="tooltip">
                                                     View
                                                 </button>
@@ -461,7 +461,7 @@
 
                                             <td class="text-center">
                                                 <button type="button" data-bs-toggle="modal" data-bs-target="#view"
-                                                    class="btn btn-info btn-xs me-2 view-btn" title="View"
+                                                    class="btn btn-primary btn-xs me-2 view-btn" title="View"
                                                     data-toggle="tooltip">
                                                     View
                                                 </button>
