--- a/html/ui-buttons.html
+++ b/html/ui-buttons.html
@@ -83,20 +83,20 @@
                           <mask id="mask-2" fill="white">
                             <use xlink:href="#path-1"></use>
                           </mask>
-                          <use fill="#696cff" xlink:href="#path-1"></use>
+                          <use fill="#1C315E" xlink:href="#path-1"></use>
                           <g id="Path-3" mask="url(#mask-2)">
-                            <use fill="#696cff" xlink:href="#path-3"></use>
+                            <use fill="#1C315E" xlink:href="#path-3"></use>
                             <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-3"></use>
                           </g>
                           <g id="Path-4" mask="url(#mask-2)">
-                            <use fill="#696cff" xlink:href="#path-4"></use>
+                            <use fill="#1C315E" xlink:href="#path-4"></use>
                             <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-4"></use>
                           </g>
                         </g>
                         <g
                           id="Triangle"
                           transform="translate(19.000000, 11.000000) rotate(-300.000000) translate(-19.000000, -11.000000) ">
-                          <use fill="#696cff" xlink:href="#path-5"></use>
+                          <use fill="#1C315E" xlink:href="#path-5"></use>
                           <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-5"></use>
                         </g>
                       </g>
@@ -726,7 +726,7 @@
                         <button type="button" class="btn btn-success">Success</button>
                         <button type="button" class="btn btn-danger">Danger</button>
                         <button type="button" class="btn btn-warning">Warning</button>
-                        <button type="button" class="btn btn-info">Info</button>
+                        <button type="button" class="btn btn-primary">Info</button>
                         <button type="button" class="btn btn-dark">Dark</button>
                       </div>
                     </div>
@@ -739,7 +739,7 @@
                         <button type="button" class="btn rounded-pill btn-success">Success</button>
                         <button type="button" class="btn rounded-pill btn-danger">Danger</button>
                         <button type="button" class="btn rounded-pill btn-warning">Warning</button>
-                        <button type="button" class="btn rounded-pill btn-info">Info</button>
+                        <button type="button" class="btn rounded-pill btn-primary">Info</button>
                         <button type="button" class="btn rounded-pill btn-dark">Dark</button>
                       </div>
                     </div>
