--- a/html/ui-dropdowns.html
+++ b/html/ui-dropdowns.html
@@ -83,20 +83,20 @@
                           <mask id="mask-2" fill="white">
                             <use xlink:href="#path-1"></use>
                           </mask>
-                          <use fill="#696cff" xlink:href="#path-1"></use>
+                          <use fill="#1C315E" xlink:href="#path-1"></use>
                           <g id="Path-3" mask="url(#mask-2)">
-                            <use fill="#696cff" xlink:href="#path-3"></use>
+                            <use fill="#1C315E" xlink:href="#path-3"></use>
                             <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-3"></use>
                           </g>
                           <g id="Path-4" mask="url(#mask-2)">
-                            <use fill="#696cff" xlink:href="#path-4"></use>
+                            <use fill="#1C315E" xlink:href="#path-4"></use>
                             <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-4"></use>
                           </g>
                         </g>
                         <g
                           id="Triangle"
                           transform="translate(19.000000, 11.000000) rotate(-300.000000) translate(-19.000000, -11.000000) ">
-                          <use fill="#696cff" xlink:href="#path-5"></use>
+                          <use fill="#1C315E" xlink:href="#path-5"></use>
                           <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-5"></use>
                         </g>
                       </g>
@@ -814,7 +814,7 @@
                     <div class="btn-group">
                       <button
                         type="button"
-                        class="btn btn-info dropdown-toggle"
+                        class="btn btn-primary dropdown-toggle"
                         data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Info
@@ -1061,10 +1061,10 @@
                     </div>
 
                     <div class="btn-group">
-                      <button type="button" class="btn btn-info">Info</button>
+                      <button type="button" class="btn btn-primary">Info</button>
                       <button
                         type="button"
-                        class="btn btn-info dropdown-toggle dropdown-toggle-split"
+                        class="btn btn-primary dropdown-toggle dropdown-toggle-split"
                         data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <span class="visually-hidden">Toggle Dropdown</span>
