--- a/html/user-access.html
+++ b/html/user-access.html
@@ -326,7 +326,7 @@
         <!--View Modal -->
         <div class="modal fade" id="access" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog modal-fullscreen">
+            <div class="modal-dialog modal-fullscreen modal-dialog-centered">
                 <div class="modal-content ">
                     <div class="modal-header modal-header-style">
                         <h5 class="modal-title mb-3 text-white " id="staticBackdropLabel">Acess Control</h5>
